# Smart-Chess

./: CMakeCache.txt  CMakeLists.txt  Haghparast-Arian-610300042-phase2.cpp  Makefile  README.md  chess  cmake_install.cmake
headers/: board.h  cells.h  kings.h  piece.h
src/: board.cpp  kings.cpp  main.cpp  piece.cpp
